--- a/LastMinutes/Views/Home/Index.cshtml
+++ b/LastMinutes/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@model LastMinutes.Models.Home.IndexViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.<br/>
+        @Model.IndexTest
+        </p>
 </div>
