Re-enabled features disabled for Spotify Wrapped.

--- a/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
+++ b/LastMinutes/Views/LastMinutes/ReleaseNotes.cshtml
@@ -22,6 +22,18 @@
     <div class="p-2 px-1 text-white">
 
         <div class="row my-4">
+            <h5>Beta11209 - 12/09/2024</h5>
+            <p>The wrath of Spotify Wrapped seems to have wrapped up...</p>
+            <span>
+                <ul>
+                    <li>Enabled long term time frame searches (all time, this year, the past year).</li>
+                    <li>Deezer track searches are still slowed down.</li>
+                    <li>Spotify track searches are still disabled.</li>
+                </ul>
+            </span>
+        </div>
+
+        <div class="row my-4">
             <h5>Beta11205 - 12/05/2024</h5>
             <p>For some reason, LastMinutes is under extremely high demand (compared to normal), I presume this is because Spotify Wrapped has just released. With about 30 users per hour, LastMinutes was being rate limited by the Spotify API and put into a cooldown of many many hours. When a cooldown like this occurs, the entire queue freezes until the cooldown is over, this is something I may change in the future.</p>
             <span>
